# emayan

./: README.md
ai/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
ai/src/: index.ts  readmeContext.ts
app/: .env.example
app/app/: globals.css
app/components/: GrievanceForm.js  Header.js  WalletBootstrap.js  WalletConnector.js
app/components/ui/: button.js  card.js  input.js
app/lib/: grievance-memo.js  telegram-grievance-text.js  xrpl-explorer.js
app/src/components/: EmayanPettyGrievanceForm.tsx  LiveFeed.tsx  Nav.tsx
contracts/: README.md
contracts/freelance-agreement-factory/: .gitignore  README.md  bedrock.toml
contracts/freelance-agreement-factory/escrow/: Cargo.toml
contracts/freelance-agreement-factory/escrow/src/: lib.rs
contracts/freelance-agreement-factory/vault/: Cargo.toml
contracts/freelance-agreement-factory/vault/src/: lib.rs
contracts/petty-ledger/: .gitignore  Cargo.toml  README.md  bedrock.toml
contracts/petty-ledger/.cargo/: config.toml
contracts/petty-ledger/escrow/: Cargo.toml
contracts/petty-ledger/src/: lib.rs
contracts/petty-ledger/vault/: Cargo.toml
ui/: tailwind.config.js  tsconfig.tsbuildinfo
ui/app/: globals.css
ui/components/: SentTransactionsPanel.js
ui/hooks/: useWalletManager.js
ui/lib/: grievance-memo.js  networks.js
ui/my-app/: .env.example  .scaffold-xrp.json  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
ui/my-app/app/: globals.css  layout.js  page.js
ui/my-app/components/: AccountInfo.js  Header.js  (+4 more)
(+92 files in other folders)
