[package]
name = "freelance-agreement-factory-vault"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-wasm-stdlib = { git = "https://github.com/willemolding/xrpl-wasm-stdlib.git", branch = "willem/smart-vaults", package = "xrpl-wasm-stdlib" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
